Docs/bench: fix performance.md transparency gaps + one-command safegcd A/B
Make every optimization independently reproducible and fix stale references
a user would trip over:

- §7 referenced OpenCLContextIGTableTest / OpenCLContextCombTableTest, which
  DO NOT EXIST (stale surefire-report names); the real test is
  OpenCLPrecomputeKernelTest. The documented gate command now runs (verified:
  6 classes, 83 tests, 0 fail). Corrected its description (GPU precompute
  kernels, not "pure-Java"; added the safegcd parity test and buildOptions).
- §2 still called inv_mod a binary GCD; it is safegcd by default now.
- §3 said the kpwi optimum is 64; it is 128 (consistent with §1/§4).
- Added a "Reproducibility map" table: each stage -> how to re-measure -> its
  correctness gate, with an honest note that only Stage 4 has a build-time
  toggle (2b/3 require comparing the staged commits).
- GpuFuse8FilterBenchmark gains a useSafeGcdInverse @Param, so the Stage 4
  A/B is a single JMH run (-p useSafeGcdInverse=true,false); recipe added to
  §5. Smoke-verified both arms run (true 161.6 vs false 108.7 ops/s).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>